--- a/index.html
+++ b/index.html
@@ -2,27 +2,17 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>amis admin</title>
+    <title>iCode</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, maximum-scale=1"
-    />
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"/>
     <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
-    <link
-      rel="stylesheet"
-      title="default"
-      href="https://unpkg.com/amis@3.2.0/sdk/sdk.css"
-    />
-    <link rel="stylesheet" href="https://unpkg.com/amis@3.2.0/sdk/helper.css" />
-    <link
-      rel="stylesheet"
-      href="https://unpkg.com/amis@3.2.0/sdk/iconfont.css"
-    />
-    <script src="https://unpkg.com/amis@3.2.0/sdk/sdk.js"></script>
-    <script src="https://unpkg.com/vue@2"></script>
-    <script src="https://unpkg.com/history@4.10.1
-/umd/history.js"></script>
+    <link rel="stylesheet" title="default" href="/amis/sdk/sdk.css"/>
+    <link rel="stylesheet" href="/amis/sdk/helper.css" />
+    <link rel="stylesheet" href="/amis/sdk/iconfont.css"/>
+    <script src="/amis/sdk/sdk.js"></script>
+    <script src="/echarts/dist/echarts.js"></script>
+    <script src="/vue/dist/vue.runtime.js"></script>
+    <script src="/history/umd/history.js"></script>
     <style>
       html,
       body,
@@ -37,8 +27,11 @@
   </head>
   <body>
     <div id="root" class="app-wrapper"></div>
+    <script src="/amis/sdk/charts.js"></script>
+    <script>window.echarts = amisRequire('echarts');</script>
     <script>
       (function () {
+        console.log('window.location.pathname='+window.location.pathname);
         let amis = amisRequire('amis/embed');
         const match = amisRequire('path-to-regexp').match;
 
@@ -48,8 +41,8 @@
 
         const app = {
           type: 'app',
-          brandName: 'Admin',
-          logo: '/public/logo.png',
+          brandName: '',
+          logo: '/api/icode/static/9zdata.ico',
           header: {
             type: 'tpl',
             inline: false,
@@ -59,7 +52,14 @@
           // footer: '<div class="p-2 text-center bg-light">底部区域</div>',
           // asideBefore: '<div class="p-2 text-center">菜单前面区域</div>',
           // asideAfter: '<div class="p-2 text-center">菜单后面区域</div>',
-          api: '/pages/site.json'
+          api: {
+            'url':'/api/icode/page?page_code=' + window.location.pathname,
+            // "adaptor": "console.log(context);return {...payload, status: payload.status === 200 ? 0 : payload.status, rows:[{page_content:{pages:[{label:'401',url:'/401',link:'/401'}]}}]};",
+            // "adaptor": "console.log('lei999:',context,payload);return {status:200, data:{rows:[{page_content:{pages:[{label:'401',url:'/401','schemaApi': {url:'/api/icode/page?page_code=/401','responseData': {'&': '${rows[0].page_content}'}}}]}}]}};",
+            "adaptor": "console.log('lei999:',context,payload);return {...payload, status:200};",
+            // "replaceData": true,
+            "responseData": {"&": "${rows[0].page_content}"}
+          }
         };
 
         function normalizeLink(to, location = history.location) {
@@ -96,7 +96,6 @@
             }
             pathname = paths.concat(pathname).join('/');
           }
-
           return pathname + search + hash;
         }
 
@@ -110,7 +109,6 @@
             pathname,
             hash: ''
           });
-
           if (!~link.indexOf('http') && ~link.indexOf(':')) {
             let strict = ctx && ctx.strict;
             return match(link, {
@@ -118,7 +116,6 @@
               strict: typeof strict !== 'undefined' ? strict : true
             })(pathname);
           }
-
           return decodeURI(pathname) === link;
         }
 
@@ -133,23 +130,21 @@
             context: {
               // 全局上下文数据, 非受控的数据，无论哪一层都能获取到，包括弹窗自定义数据映射后都能获取到。
               // 可以用来放一下全局配置等。比如 API_HOST, 这样页面配置里面可以通过 ${API_HOST} 来获取到。
-              API_HOST: 'https://3xsw4ap8wah59.cfc-execute.bj.baidubce.com'
+              // API_HOST: 'https://3xsw4ap8wah59.cfc-execute.bj.baidubce.com'
+              // API_HOST: 'https://isupply-icode.9zdata.cn'
             }
           },
           {
             // watchRouteChange: fn => {
             //   return history.listen(fn);
             // },
+            // fetcher: safeFetcher, // 注入安全请求器
+            enableAMISDebug: true, // 开启调试模式
             updateLocation: (location, replace) => {
               location = normalizeLink(location);
               if (location === 'goBack') {
                 return history.goBack();
-              } else if (
-                (!/^https?\:\/\//.test(location) &&
-                  location ===
-                    history.location.pathname + history.location.search) ||
-                location === history.location.href
-              ) {
+              } else if ((!/^https?\:\/\//.test(location) && location === history.location.pathname + history.location.search) || location === history.location.href) {
                 // 目标地址和当前地址一样，不处理，免得重复刷新
                 return;
               } else if (/^https?\:\/\//.test(location) || !history) {
@@ -181,11 +176,7 @@
 
               if (/^https?:\/\//.test(to)) {
                 window.location.href = to;
-              } else if (
-                (!/^https?\:\/\//.test(to) &&
-                  to === history.pathname + history.location.search) ||
-                to === history.location.href
-              ) {
+              } else if ( (!/^https?\:\/\//.test(to) && to === history.pathname + history.location.search) || to === history.location.href ) {
                 // do nothing
               } else {
                 history.push(to);
